--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+
+/* reset */
+*, ::after, ::before {
+  box-sizing: border-box;
+  padding:0;
+  margin:0
+}
+
 body {
   margin: 0;
   font-family: 'Roboto', sans-serif;
@@ -22,10 +30,6 @@ header img {
 
 header h1 {
   font-size: 2.5em;
-}
-
-footer {
-  background: 
 }
 
 h1, h2 {
